--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"><!--نوع الخط جبناه من جوجل-->
     <link rel="stylesheet" href="../template/css/bootstrap.min.css"><!--هدول من التيمبليت نفسو الها علاقة بترتيب الازرار وهيكل الصفحة-->
         <link rel="stylesheet" href="../template/css/templatemo-video-catalog.css"><!--من التمبليت نفسو -->
+    <head>
+  <base href="https://OmarAhmad1-cpu.github.io/MyCalories-final/">
+  <!-- خليه أول عنصر قبل أي <link> أو <script> -->
+  ...
+</head>
+
 </head>
 
 <body class="page-bg"><!--اسم الكلاس -->
@@ -226,4 +232,5 @@
 
 </html>
 <!-- rebuild -->
+
 
