--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html lang="en"> <!--language is english -->
 
 <head>
-    <base href="https://OmarAhmad1-cpu.github.io/MyCalories-final/">
-    <meta charset="UTF-8"> <!--بيدعم كل انواع الرموز -->
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"><!--لتكون الصفحة مناسبة لحجم شاشة الموبايل مثلا-->
-    <title>MyCalories</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"><!--مكتبة فيها ايقونات زي تاعت الانستا-->
-    <link rel="stylesheet" href="./home.css"><!--link the css file to html-->
-    <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro&display=swap" rel="stylesheet"><!--نوع الخط جبناه من جوجل-->
-    <link rel="stylesheet" href="../template/css/bootstrap.min.css"><!--هدول من التيمبليت نفسو الها علاقة بترتيب الازرار وهيكل الصفحة-->
-        <link rel="stylesheet" href="../template/css/templatemo-video-catalog.css"><!--من التمبليت نفسو -->
-   
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>MyCalories</title>
 
+  <!-- Bootstrap + Font Awesome (CDN) -->
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
+  <!-- ملفاتك المحلية (لاحظ: بدون / في البداية) -->
+  <link rel="stylesheet" href="home.css">
+  <link rel="stylesheet" href="video.css">
+  <link rel="stylesheet" href="templatemoo-video-catalog.css"><!-- عدّل الاسم لو مختلف عندك -->
+
+  <!-- JS -->
+  <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.4/dist/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="parallax.min.js"></script>
+  <script src="home.js" defer></script>
+  <script src="video.js" defer></script>
 </head>
+
 
 <body class="page-bg"><!--اسم الكلاس -->
         <div class="tm-page-wrap mx-auto">                      <!--من 16 ل 54  عشان الموقع يفتح عكل الاجهزة-->
@@ -229,6 +238,7 @@
 
 </html>
 <!-- rebuild -->
+
 
 
 
